--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,9 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	adafruit/Adafruit Unified Sensor@^1.1.14
+	adafruit/DHT sensor library@^1.4.6
+	robtillaart/DHTlib@^0.1.36
+	adidax/DHT11@0.0.0-alpha+sha.b7fbbcd86f
