--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.6
 	robtillaart/DHTlib@^0.1.36
 	adidax/DHT11@0.0.0-alpha+sha.b7fbbcd86f
+	arduino-libraries/Scheduler@^0.4.4
