fixes where brightness ival doesnt meet the spectation

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-build_type = release
+build_type = debug
 lib_deps = 
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	adafruit/Adafruit Unified Sensor@^1.1.14
